--- a/daili2.yaml
+++ b/daili2.yaml
@@ -42,12 +42,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.82
-  maximum: 47.42
-  average: 42.37
-  UpdateDay: '2022-06-16T09:30:26.137958'
+  minimum: 41.98
+  maximum: 78.92
+  average: 55.0
+  UpdateDay: '2022-06-16T12:34:46.270690'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 45435
+  Rank: 45526
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -57,12 +57,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.33
-  maximum: 60.46
-  average: 59.77
-  UpdateDay: '2022-06-16T09:31:12.858218'
+  minimum: 59.61
+  maximum: 67.55
+  average: 64.48
+  UpdateDay: '2022-06-16T12:35:34.497728'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 41847
+  Rank: 41905
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -76,7 +76,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 38393
+  Rank: 38243
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -86,27 +86,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 51.42
-  maximum: 55.27
-  average: 53.45
-  UpdateDay: '2022-06-16T09:31:12.801329'
+  minimum: 50.46
+  maximum: 54.45
+  average: 52.72
+  UpdateDay: '2022-06-16T12:35:34.286080'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 35830
+  Rank: 35917
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.69
-  maximum: 39.29
-  average: 38.98
-  UpdateDay: '2022-06-16T09:31:12.731511'
+  minimum: 45.83
+  maximum: 52.89
+  average: 49.04
+  UpdateDay: '2022-06-16T12:34:46.249331'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 33950
+  Rank: 34051
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -116,12 +116,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.99
-  maximum: 48.81
-  average: 46.84
-  UpdateDay: '2022-06-16T09:31:13.714383'
+  minimum: 40.13
+  maximum: 58.22
+  average: 52.19
+  UpdateDay: '2022-06-16T12:35:36.429602'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 33189
+  Rank: 33291
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -135,7 +135,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 32874
+  Rank: 32724
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 32062
+  Rank: 32162
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 31760
+  Rank: 31860
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 30008
+  Rank: 30058
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,22 +189,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 29472
+  Rank: 29522
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.04
-  maximum: 46.56
-  average: 43.82
-  UpdateDay: '2022-06-16T09:30:26.146666'
+  minimum: 43.63
+  maximum: 55.99
+  average: 48.97
+  UpdateDay: '2022-06-16T12:34:46.222074'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 23964
+  Rank: 24015
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   type: trojan
@@ -219,37 +219,37 @@ proxies:
   average: 61.93
   UpdateDay: '2022-06-16T09:30:26.180837'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 22893
+  Rank: 22920
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.6
-  maximum: 47.73
-  average: 45.5
-  UpdateDay: '2022-06-16T09:31:12.749382'
+  minimum: 41.54
+  maximum: 53.45
+  average: 47.48
+  UpdateDay: '2022-06-16T12:34:46.262209'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 20411
+  Rank: 20487
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: '18825786'
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 186.57
-  maximum: 195.3
-  average: 192.28
-  UpdateDay: '2022-06-16T09:31:02.544941'
+  minimum: 182.0
+  maximum: 192.12
+  average: 185.94
+  UpdateDay: '2022-06-16T12:35:36.839177'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 17929
+  Rank: 17981
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -258,13 +258,13 @@ proxies:
   password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
-  success_rate: 100.0
-  minimum: 41.64
-  maximum: 3071.27
-  average: 1391.79
-  UpdateDay: '2022-06-16T09:31:16.783729'
+  success_rate: 66.67
+  minimum: 41.4
+  maximum: 47.64
+  average: 44.52
+  UpdateDay: '2022-06-16T12:35:38.696365'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17654
+  Rank: 17663
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -274,12 +274,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 153.01
-  maximum: 158.41
-  average: 156.2
-  UpdateDay: '2022-06-16T09:31:16.087510'
+  minimum: 146.94
+  maximum: 148.19
+  average: 147.57
+  UpdateDay: '2022-06-16T12:35:37.754902'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 17140
+  Rank: 17192
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -294,22 +294,22 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 16762
+  Rank: 16810
 - name: xioix.gq:443@trojan
   server: xioix.gq
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 9b7195ba-f029-4d7d-a728-ece6e0fdc363
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 165.57
-  maximum: 175.72
-  average: 168.98
-  UpdateDay: '2022-06-16T09:31:02.471316'
+  minimum: 165.69
+  maximum: 166.63
+  average: 166.28
+  UpdateDay: '2022-06-16T12:35:36.921055'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
-  Rank: 16334
+  Rank: 16374
 - name: s315.s2022.xyz:40385@trojan
   password: 5a0c130c-31f7-31dc-89c3-5c26865d56f9
   port: 40385
@@ -324,7 +324,7 @@ proxies:
   average: 74.73
   UpdateDay: '2022-04-28T03:32:03.567971'
   PFirstFoundDay: '2022-04-28T03:32:03.567976'
-  Rank: 14981
+  Rank: 15031
 proxy-groups:
 - name: PG-default
   type: fallback
