--- a/daili.yaml
+++ b/daili.yaml
@@ -42,12 +42,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.16
-  maximum: 42.96
-  average: 42.04
-  UpdateDay: '2022-06-18T21:28:38.021889'
+  minimum: 39.59
+  maximum: 40.86
+  average: 40.15
+  UpdateDay: '2022-06-18T21:32:14.161219'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 45704
+  Rank: 45706
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   type: trojan
@@ -57,12 +57,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 84.94
-  maximum: 99.48
-  average: 94.47
-  UpdateDay: '2022-06-18T21:27:43.945581'
+  minimum: 79.46
+  maximum: 102.34
+  average: 91.37
+  UpdateDay: '2022-06-18T21:31:20.241278'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 42037
+  Rank: 42038
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -86,12 +86,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 102.55
-  maximum: 117.98
-  average: 112.31
-  UpdateDay: '2022-06-18T21:27:43.988245'
+  minimum: 95.38
+  maximum: 117.74
+  average: 110.06
+  UpdateDay: '2022-06-18T21:31:20.312075'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 36039
+  Rank: 36040
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -116,12 +116,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.23
-  maximum: 45.42
-  average: 44.13
-  UpdateDay: '2022-06-18T21:28:38.551689'
+  minimum: 37.12
+  maximum: 43.43
+  average: 39.54
+  UpdateDay: '2022-06-18T21:32:14.199693'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 33495
+  Rank: 33497
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -199,12 +199,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 45.3
-  maximum: 49.25
-  average: 47.71
-  UpdateDay: '2022-06-18T21:28:38.038549'
+  minimum: 41.05
+  maximum: 50.19
+  average: 44.43
+  UpdateDay: '2022-06-18T21:32:14.184984'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 24117
+  Rank: 24118
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -214,12 +214,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 51.84
-  maximum: 70.92
-  average: 61.16
-  UpdateDay: '2022-06-18T21:28:38.080598'
+  minimum: 51.26
+  maximum: 2114.01
+  average: 746.12
+  UpdateDay: '2022-06-18T21:32:16.293846'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 23049
+  Rank: 23051
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -229,12 +229,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.17
-  maximum: 48.52
-  average: 45.78
-  UpdateDay: '2022-06-18T21:28:38.042399'
+  minimum: 38.97
+  maximum: 39.99
+  average: 39.44
+  UpdateDay: '2022-06-18T21:32:14.180660'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 20665
+  Rank: 20667
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   type: trojan
@@ -244,12 +244,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 182.14
-  maximum: 190.49
-  average: 185.87
-  UpdateDay: '2022-06-18T21:28:20.436547'
+  minimum: 178.05
+  maximum: 210.81
+  average: 189.66
+  UpdateDay: '2022-06-18T21:31:56.594921'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 18083
+  Rank: 18084
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -259,27 +259,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.88
-  maximum: 46.43
-  average: 40.96
-  UpdateDay: '2022-06-18T21:28:38.026215'
+  minimum: 38.08
+  maximum: 1065.21
+  average: 380.64
+  UpdateDay: '2022-06-18T21:32:15.195516'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17727
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
-  port: 443
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 37.93
-  maximum: 45.69
-  average: 41.19
-  UpdateDay: '2022-06-18T21:28:38.025314'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17727
+  Rank: 17731
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -289,12 +274,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 156.04
-  maximum: 159.28
-  average: 157.43
-  UpdateDay: '2022-06-18T21:28:38.889376'
+  minimum: 147.21
+  maximum: 149.37
+  average: 148.55
+  UpdateDay: '2022-06-18T21:32:14.522967'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 17296
+  Rank: 17298
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -319,12 +304,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 198.45
-  maximum: 250.96
-  average: 223.74
-  UpdateDay: '2022-06-18T21:28:38.707227'
+  minimum: 167.37
+  maximum: 188.92
+  average: 176.2
+  UpdateDay: '2022-06-18T21:32:14.605489'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
-  Rank: 16471
+  Rank: 16473
+- name: s315.s2022.xyz:40385@trojan
+  password: 5a0c130c-31f7-31dc-89c3-5c26865d56f9
+  port: 40385
+  server: s315.s2022.xyz
+  skip-cert-verify: true
+  type: trojan
+  udp: true
+  uuid: 532999bb-ccf1-5bbf-053a-c31ffc4e6a21
+  success_rate: 100.0
+  minimum: 71.06
+  maximum: 77.73
+  average: 74.73
+  UpdateDay: '2022-04-28T03:32:03.567971'
+  PFirstFoundDay: '2022-04-28T03:32:03.567976'
+  Rank: 15111
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -348,10 +348,10 @@ proxy-groups:
   - hk31.ssgnode.ga:443@trojan
   - v.9051246.xyz:443@trojan
   - api.tcpbbr.net:443@trojan
-  - api.tcpbbr.net:443@trojan
   - api.mjj-home.com:443@trojan
   - www.nyc3000.ga:443@trojan
   - xioix.gq:443@trojan
+  - s315.s2022.xyz:40385@trojan
   tolerance: 250
 rule-providers:
   anting:
