--- a/daili.yaml
+++ b/daili.yaml
@@ -35,19 +35,19 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.59
-  maximum: 40.86
-  average: 40.15
-  UpdateDay: '2022-06-18T21:32:14.161219'
+  minimum: 8.23
+  maximum: 50.08
+  average: 32.64
+  UpdateDay: '2022-06-18T22:00:39.959858'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 45706
+  Rank: 45707
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   type: trojan
@@ -57,12 +57,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 79.46
-  maximum: 102.34
-  average: 91.37
-  UpdateDay: '2022-06-18T21:31:20.241278'
+  minimum: 61.97
+  maximum: 93.57
+  average: 80.47
+  UpdateDay: '2022-06-18T22:00:40.115983'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 42038
+  Rank: 42039
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -86,12 +86,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 95.38
-  maximum: 117.74
-  average: 110.06
-  UpdateDay: '2022-06-18T21:31:20.312075'
+  minimum: 79.91
+  maximum: 104.6
+  average: 96.05
+  UpdateDay: '2022-06-18T22:00:40.159616'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 36040
+  Rank: 36041
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -189,7 +189,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 29622
+  Rank: 29628
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -207,34 +207,34 @@ proxies:
   Rank: 24118
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 51.26
-  maximum: 2114.01
-  average: 746.12
-  UpdateDay: '2022-06-18T21:32:16.293846'
+  minimum: 82.72
+  maximum: 1087.87
+  average: 421.82
+  UpdateDay: '2022-06-18T22:00:41.137989'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 23051
+  Rank: 23063
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.97
-  maximum: 39.99
-  average: 39.44
-  UpdateDay: '2022-06-18T21:32:14.180660'
+  minimum: 41.92
+  maximum: 69.1
+  average: 52.77
+  UpdateDay: '2022-06-18T22:00:40.060447'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 20667
+  Rank: 20668
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   type: trojan
@@ -252,19 +252,34 @@ proxies:
   Rank: 18084
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.08
-  maximum: 1065.21
-  average: 380.64
-  UpdateDay: '2022-06-18T21:32:15.195516'
+  minimum: 38.21
+  maximum: 1045.31
+  average: 376.6
+  UpdateDay: '2022-06-18T22:00:40.999869'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17731
+  Rank: 17732
+- name: api.tcpbbr.net:443@trojan
+  server: api.tcpbbr.net
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 38.37
+  maximum: 1045.72
+  average: 377.05
+  UpdateDay: '2022-06-18T22:00:41.000179'
+  PFirstFoundDay: '2022-03-29T09:34:31.613124'
+  Rank: 17732
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -294,7 +309,7 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 16906
+  Rank: 16928
 - name: xioix.gq:443@trojan
   server: xioix.gq
   port: 443
@@ -310,21 +325,6 @@ proxies:
   UpdateDay: '2022-06-18T21:32:14.605489'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
   Rank: 16473
-- name: s315.s2022.xyz:40385@trojan
-  password: 5a0c130c-31f7-31dc-89c3-5c26865d56f9
-  port: 40385
-  server: s315.s2022.xyz
-  skip-cert-verify: true
-  type: trojan
-  udp: true
-  uuid: 532999bb-ccf1-5bbf-053a-c31ffc4e6a21
-  success_rate: 100.0
-  minimum: 71.06
-  maximum: 77.73
-  average: 74.73
-  UpdateDay: '2022-04-28T03:32:03.567971'
-  PFirstFoundDay: '2022-04-28T03:32:03.567976'
-  Rank: 15111
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -348,10 +348,10 @@ proxy-groups:
   - hk31.ssgnode.ga:443@trojan
   - v.9051246.xyz:443@trojan
   - api.tcpbbr.net:443@trojan
+  - api.tcpbbr.net:443@trojan
   - api.mjj-home.com:443@trojan
   - www.nyc3000.ga:443@trojan
   - xioix.gq:443@trojan
-  - s315.s2022.xyz:40385@trojan
   tolerance: 250
 rule-providers:
   anting:
