--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,19 +35,19 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 8.23
-  maximum: 50.08
-  average: 32.64
-  UpdateDay: '2022-06-18T22:00:39.959858'
+  minimum: 8.58
+  maximum: 38.38
+  average: 19.36
+  UpdateDay: '2022-06-18T22:07:50.605960'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 45707
+  Rank: 45712
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   type: trojan
@@ -57,12 +57,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 61.97
-  maximum: 93.57
-  average: 80.47
-  UpdateDay: '2022-06-18T22:00:40.115983'
+  minimum: 64.9
+  maximum: 95.1
+  average: 83.29
+  UpdateDay: '2022-06-18T22:07:14.564211'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 42039
+  Rank: 42041
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -86,12 +86,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 79.91
-  maximum: 104.6
-  average: 96.05
-  UpdateDay: '2022-06-18T22:00:40.159616'
+  minimum: 102.45
+  maximum: 109.74
+  average: 105.03
+  UpdateDay: '2022-06-18T22:07:14.621426'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 36041
+  Rank: 36043
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -116,12 +116,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.12
-  maximum: 43.43
-  average: 39.54
-  UpdateDay: '2022-06-18T21:32:14.199693'
+  minimum: 37.45
+  maximum: 39.69
+  average: 38.76
+  UpdateDay: '2022-06-18T22:07:50.693087'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 33497
+  Rank: 33503
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -199,42 +199,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.05
-  maximum: 50.19
-  average: 44.43
-  UpdateDay: '2022-06-18T21:32:14.184984'
+  minimum: 37.9
+  maximum: 49.54
+  average: 44.94
+  UpdateDay: '2022-06-18T22:07:50.697103'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 24118
+  Rank: 24121
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 82.72
-  maximum: 1087.87
-  average: 421.82
-  UpdateDay: '2022-06-18T22:00:41.137989'
+  minimum: 44.1
+  maximum: 81.5
+  average: 61.35
+  UpdateDay: '2022-06-18T22:07:50.739919'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 23063
+  Rank: 23068
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.92
-  maximum: 69.1
-  average: 52.77
-  UpdateDay: '2022-06-18T22:00:40.060447'
+  minimum: 39.16
+  maximum: 42.37
+  average: 40.31
+  UpdateDay: '2022-06-18T22:07:50.686495'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 20668
+  Rank: 20673
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   type: trojan
@@ -244,57 +244,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 178.05
-  maximum: 210.81
-  average: 189.66
-  UpdateDay: '2022-06-18T21:31:56.594921'
+  minimum: 186.31
+  maximum: 221.76
+  average: 206.36
+  UpdateDay: '2022-06-18T22:07:51.013710'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 18084
+  Rank: 18087
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 38.21
-  maximum: 1045.31
-  average: 376.6
-  UpdateDay: '2022-06-18T22:00:40.999869'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17732
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
   type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
-  port: 443
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.37
-  maximum: 1045.72
-  average: 377.05
-  UpdateDay: '2022-06-18T22:00:41.000179'
+  minimum: 51.31
+  maximum: 2103.0
+  average: 1073.14
+  UpdateDay: '2022-06-18T22:07:53.772829'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17732
+  Rank: 17739
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 147.21
-  maximum: 149.37
-  average: 148.55
-  UpdateDay: '2022-06-18T21:32:14.522967'
+  minimum: 180.4
+  maximum: 1453.65
+  average: 605.67
+  UpdateDay: '2022-06-18T22:07:52.214796'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 17298
+  Rank: 17303
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -319,12 +304,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 167.37
-  maximum: 188.92
-  average: 176.2
-  UpdateDay: '2022-06-18T21:32:14.605489'
+  minimum: 185.61
+  maximum: 204.28
+  average: 195.64
+  UpdateDay: '2022-06-18T22:07:51.141603'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
-  Rank: 16473
+  Rank: 16479
+- name: s315.s2022.xyz:40385@trojan
+  password: 5a0c130c-31f7-31dc-89c3-5c26865d56f9
+  port: 40385
+  server: s315.s2022.xyz
+  skip-cert-verify: true
+  type: trojan
+  udp: true
+  uuid: 532999bb-ccf1-5bbf-053a-c31ffc4e6a21
+  success_rate: 100.0
+  minimum: 71.06
+  maximum: 77.73
+  average: 74.73
+  UpdateDay: '2022-04-28T03:32:03.567971'
+  PFirstFoundDay: '2022-04-28T03:32:03.567976'
+  Rank: 15111
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -348,10 +348,10 @@ proxy-groups:
   - hk31.ssgnode.ga:443@trojan
   - v.9051246.xyz:443@trojan
   - api.tcpbbr.net:443@trojan
-  - api.tcpbbr.net:443@trojan
   - api.mjj-home.com:443@trojan
   - www.nyc3000.ga:443@trojan
   - xioix.gq:443@trojan
+  - s315.s2022.xyz:40385@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
